--- a/ConversationTracker/ConversationTracker/Views/Tracker/Index.cshtml
+++ b/ConversationTracker/ConversationTracker/Views/Tracker/Index.cshtml
@@ -6,7 +6,7 @@
 
 <html>
 <head>
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <script src="~/Scripts/angular.min.js"></script>
     <script>
