Poor Man's IOC and DI
Implementing one Interface to rule them all!

--- a/ConversationTracker/ConversationTracker/Views/Tracker/Index.cshtml
+++ b/ConversationTracker/ConversationTracker/Views/Tracker/Index.cshtml
@@ -94,7 +94,7 @@
 
         })();
     </script>
-    <title>Index</title>
+    <title>Conversation Tracker</title>
 </head>
 <body class="container">
     <div class="panel panel-default">
