Connection string change, RavenDB connection added.
Connection string change designed to be used in conjunction with
AppHarbor. RavenDB Class Added for DI. Bug fixed in the UI.

--- a/ConversationTracker/ConversationTracker/Views/Tracker/Index.cshtml
+++ b/ConversationTracker/ConversationTracker/Views/Tracker/Index.cshtml
@@ -111,6 +111,7 @@
                             <th>Who</th>
                             <th>Rate Of Unease</th>
                             <th>Notes</th>
+                            <th>Action</th>
                         </tr>
                     </thead>
                     <tbody ng-repeat="item in convos.items">
