Adding Authentication and authorization and https.
Still more work to be done  but for now I am happy with where it's at.

--- a/ConversationTracker/ConversationTracker/Views/Tracker/Index.cshtml
+++ b/ConversationTracker/ConversationTracker/Views/Tracker/Index.cshtml
@@ -100,6 +100,7 @@
     <div class="panel panel-default">
         <div class="panel-heading">
             Conversation Tracker
+            <span class="pull-right"><a href="~/Tracker/LogOff">Log Off</a></span>
         </div>
         <div class="panel-content">
             <div ng-app="TrackedConversations" ng-controller="ConversationsCtrl as convos">
