--- a/ConversationTracker/ConversationTracker/Views/Tracker/Index.cshtml
+++ b/ConversationTracker/ConversationTracker/Views/Tracker/Index.cshtml
@@ -101,6 +101,7 @@
         <div class="panel-heading">
             Conversation Tracker
             <span class="pull-right"><a href="~/Tracker/LogOff">Log Off</a></span>
+            <span class="pull-right"><a href="~/Tracker/ConversationTrackerReport">Report&nbsp;</a></span>
         </div>
         <div class="panel-content">
             <div ng-app="TrackedConversations" ng-controller="ConversationsCtrl as convos">
